license lock added and all endpoints updated to allow product-admins, v2.3.0
